--- a/build-essential/Dockerfile
+++ b/build-essential/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && \
 	apt-get -y upgrade && \
 	apt-get -y install less wget vim build-essential subversion libncurses5-dev zlib1g-dev gawk gcc-multilib flex git-core gettext libssl-dev && \
 	apt-get clean && \
-	useradd  --create-home --home-dir /builder --shell /bin/bash builder &&
+	useradd  --create-home --home-dir /builder --shell /bin/bash builder && \
 	rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 WORKDIR  /builder
