--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,4 +1,8 @@
 FROM jenkins
 
-RUN apt-get update && apt-get -y install docker.io
+RUN apt-get update && \
+    apt-get -y install docker.io && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    
 
