--- a/eclipse-cpp-x11/Dockerfile
+++ b/eclipse-cpp-x11/Dockerfile
@@ -2,11 +2,11 @@ FROM alljoynsville/oracle-jdk8
 
 MAINTAINER alljoynsville
 
-ENV DOWNLOAD_URL http://download.eclipse.org/technology/epp/downloads/release/mars/R/eclipse-cpp-mars-R-linux-gtk-x86_64.tar.gz
+ENV DOWNLOAD_URL http://download.eclipse.org/technology/epp/downloads/release/mars/2/eclipse-cpp-mars-2-linux-gtk-x86_64.tar.gz
 ENV INSTALLATION_DIR /usr/local
 
 RUN apt-get update \
- && apt-get install -y curl openssh-server xorg libgtk2.0-0 libssl-dev build-essential scons subversion git-core valgrind cmake \
+ && apt-get install -yqq vim curl openssh-server xorg libgtk2.0-0 libssl-dev build-essential scons subversion git-core valgrind cmake \
  && mkdir /var/run/sshd \
  && curl "$DOWNLOAD_URL" | tar vxz -C $INSTALLATION_DIR/ \
  && adduser --disabled-password --quiet --gecos '' eclipse \
