--- a/build-machines/centos6-32/Dockerfile
+++ b/build-machines/centos6-32/Dockerfile
@@ -1,9 +1,10 @@
 FROM centos:6.8
 
-RUN yum -y install glibc-devel.i686 glibc.i686 libstdc++.i686 libstdc++-devel.i686 zlib.i686 vim && \
-    yum -y groupinstall "Development tools"
+RUN yum -y -q install glibc.i686 glibc-devel.i686 libstdc++.i686 libstdc++-devel.i686 zlib.i686 vim && \
+    yum -y -q groupinstall "Development tools" && \
+    adduser builder
 
-WORKDIR  /builder
+WORKDIR  /home/builder
 USER builder
 CMD ["/bin/bash"]
 
