--- a/build-machines/centos6-32/Dockerfile
+++ b/build-machines/centos6-32/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos:6.8
 
 RUN yum -y -q install glibc.i686 glibc-devel.i686 libstdc++.i686 libstdc++-devel.i686 zlib.i686 \
-    glibc-devel.x86_64 ncurses-devel vim wget && \
+    glibc-devel.x86_64 ncurses-devel makedepend vim wget && \
     yum -y -q groupinstall "Development tools" && \
     adduser builder
 
