--- a/yocto/Dockerfile
+++ b/yocto/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:trusty
 RUN apt-get update && \
     apt-get -yqq install gawk wget git-core diffstat unzip texinfo gcc-multilib \
       build-essential chrpath socat libsdl1.2-dev xterm \
-      subversion wget unzip python vim && \
+      subversion wget unzip python python-pip vim && \
     apt-get clean && \
     useradd -m builder && \
     echo 'builder ALL=NOPASSWD: ALL' > /etc/sudoers.d/builder
