--- a/eclipse-cpp-x11/Dockerfile
+++ b/eclipse-cpp-x11/Dockerfile
@@ -5,8 +5,8 @@ MAINTAINER alljoynsville
 ENV DOWNLOAD_URL http://download.eclipse.org/technology/epp/downloads/release/neon/3/eclipse-cpp-neon-3-linux-gtk-x86_64.tar.gz
 ENV INSTALLATION_DIR /usr/local
 
-RUN apt-get -yqq update \
- && apt-get -yqq install vim curl wget openssh-server xorg libgtk2.0-0 libssl-dev build-essential scons sudo \
+RUN DEBIAN_FRONTEND=noninteractive apt-get -yqq update \
+ && DEBIAN_FRONTEND=noninteractive apt-get -yqq install vim curl wget openssh-server xorg libgtk2.0-0 libssl-dev build-essential scons sudo \
     subversion git-core valgrind cmake default-jre \
  && mkdir /var/run/sshd \
  && curl "$DOWNLOAD_URL" | tar xz -C $INSTALLATION_DIR/ \
