--- a/eclipse-cpp-x11/Dockerfile
+++ b/eclipse-cpp-x11/Dockerfile
@@ -4,10 +4,14 @@ MAINTAINER alljoynsville
 
 ENV DOWNLOAD_URL http://download.eclipse.org/technology/epp/downloads/release/neon/3/eclipse-cpp-neon-3-linux-gtk-x86_64.tar.gz
 ENV INSTALLATION_DIR /usr/local
+RUN locale-gen en_US.UTF-8
+ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get -yqq update \
- && DEBIAN_FRONTEND=noninteractive apt-get -yqq install vim curl wget openssh-server xorg libgtk2.0-0 libssl-dev \
-    build-essential scons sudo python python-pip subversion git-core valgrind cmake default-jre \
+ && DEBIAN_FRONTEND=noninteractive apt-get -yqq install openssh-server xorg libgtk2.0-0 default-jre \
+    build-essential scons valgrind cmake gcc-multilib ccache quilt libncurses5-dev zlib1g-dev libssl-dev \
+    sudo vim curl wget unzip python python-pip gawk flex gettext \
+    subversion git-core \
  && mkdir /var/run/sshd \
  && useradd -m eclipse -s /bin/bash \
  && echo 'eclipse ALL=NOPASSWD: ALL' > /etc/sudoers.d/eclipse \
