changing the user:group couple to be eclipse:eclipse since root:eclipse fucks me up.

--- a/eclipse-cpp-x11-with-libs/Dockerfile
+++ b/eclipse-cpp-x11-with-libs/Dockerfile
@@ -23,7 +23,7 @@ RUN mkdir /etc/cloudofthings/
 RUN echo "X11UseLocalhost no" >> /etc/ssh/sshd_config 
 RUN curl -s -L "$DOWNLOAD_URL" | tar xz -C $INSTALLATION_DIR/ \
  && ln -s $INSTALLATION_DIR/eclipse/eclipse /usr/bin/ \
- && chown -R root:eclipse $INSTALLATION_DIR/eclipse \
+ && chown -R eclipse:eclipse $INSTALLATION_DIR/eclipse \
  && chmod -R 775 $INSTALLATION_DIR/eclipse
 
 RUN eclipse -clean -purgeHistory -application org.eclipse.equinox.p2.director -noSplash -repository http://download.eclipse.org/technology/subversive/4.0/update-site/ -installIUs org.eclipse.team.svn.feature.group -vmargs -Declipse.p2.mirrors=true -Djava.net.preferIPv4Stack=true
