--- a/eclipse-cpp-x11-with-libs/Dockerfile
+++ b/eclipse-cpp-x11-with-libs/Dockerfile
@@ -26,6 +26,6 @@ RUN curl -s -L "$DOWNLOAD_URL" | tar xz -C $INSTALLATION_DIR/ \
 
 RUN eclipse -clean -purgeHistory -application org.eclipse.equinox.p2.director -noSplash -repository http://download.eclipse.org/technology/subversive/4.0/update-site/,http://community.polarion.com/projects/subversive/download/eclipse/6.0/neon-site/  -installIUs org.eclipse.team.svn.feature.group,org.polarion.eclipse.team.svn.connector.feature.group,org.polarion.eclipse.team.svn.connector.javahl18.feature.group -vmargs -Declipse.p2.mirrors=true -Djava.net.preferIPv4Stack=true
 
-RUN chown -R eclipse:eclipse $INSTALLATION_DIR/eclipse \
+RUN chown -R eclipse:eclipse $INSTALLATION_DIR/eclipse &&\
   chmod -R 775 $INSTALLATION_DIR/eclipse
 CMD ["/usr/sbin/sshd", "-D"]
