--- a/build-essential/Dockerfile
+++ b/build-essential/Dockerfile
@@ -1,11 +1,12 @@
-FROM ubuntu:trusty
+FROM ubuntu:xenial
 
 MAINTAINER alljoynsville
 
 RUN apt-get update && \
 	apt-get update && \
 	apt-get -y upgrade && \
-	apt-get -y install less wget vim python build-essential subversion libncurses5-dev unzip zlib1g-dev gawk gcc-multilib flex git-core gettext libssl-dev && \
+	apt-get -y install less sudo wget vim python build-essential subversion libncurses5-dev unzip cmake \
+	                   zlib1g-dev gawk gcc-multilib flex git-core gettext libssl-dev && \
 	apt-get clean && \
 	useradd -m builder && \
 	echo 'builder ALL=NOPASSWD: ALL' > /etc/sudoers.d/builder && \
