--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,11 +1,12 @@
 FROM jenkins:2.7.4
 USER root
 RUN apt-get update -qq && \
-    apt-get install apt-transport-https && \
-    apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D && \
-    echo "deb https://apt.dockerproject.org/repo ubuntu-trusty main" > /etc/apt/sources.list.d/docker.list && \
-    apt-get update -qq && \
-    apt-get -y -qq install docker-engine vim less rsync && \
+    apt-get install -y sudo apt-transport-https && \
+    apt-get -y -qq install vim less rsync && \
+    curl -fsSL get.docker.com | sudo bash &&\
+    
+    
     usermod -aG docker jenkins && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
